--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "^3.0.10",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
