--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.10",
-    "vuex": "^4.0.2"
+    "vuex": "^4.0.2",
+    "webstomp-client": "^1.2.6"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
