--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^2.9.4",
     "jquery": "^3.6.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
