- vue-material 라이브러리 적용 - 프로그레스 바 컴포넌트 적용(테스트용)

--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "bootstrap": "^5.2.0",
+    "bootstrap-vue": "^2.22.0",
     "chart.js": "^2.9.4",
+    "easy-circular-progress": "^1.0.4",
     "jquery": "^3.6.0",
-    "vue": "^2.5.2",
+    "react-customizable-progressbar": "^1.1.0",
+    "vue": "^2.7.8",
+    "vue-material": "^1.0.0-beta-15",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.10",
     "vuex": "^4.0.2",
