--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-vue": "^2.22.0",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-datasource-prometheus": "^1.0.11",
     "easy-circular-progress": "^1.0.4",
     "jquery": "^3.6.0",
     "react-customizable-progressbar": "^1.1.0",
